# ArbitaryPrecisionFloatingPointNumber

./: .gitignore  Fpn.cpp  Fpn.hpp  Fpn_8cpp.html  Fpn_8cpp__incl.map  Fpn_8cpp__incl.md5  Fpn_8hpp.html  Fpn_8hpp__dep__incl.map  Fpn_8hpp__dep__incl.md5  Fpn_8hpp__incl.map  Fpn_8hpp__incl.md5  Fpn_8hpp_source.html  Makefile  README.md  README_8md.html  annotated.html  autotoc_md0.html  classFpn-members.html  classFpn.html  classes.html  doxconf  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  gen  gen.cpp  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  main  main.cpp  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  menudata.js  pages.html
Example/: Makefile  README.md  example.cpp
String_Float/: main  main.cpp
String_Fpn/: main  main.cpp
String_Fpn_v2/: Fpn.hpp  main  main.cpp
String_Fpn_v3/: Fpn.cpp  main  main.cpp  sphere.txt
Tests/UnitTests/: CMakeLists.txt  UnitTests.cpp
gen_ieee754_float/: drop_wawe_float.txt  gen  gen_dropwawe.c  gen_sphere.c  old_gen.c  results_of_dropwawe_errors.csv  sphere_float.txt
gen_string_Fpn/: main.cpp
loop_tests/: for1.cpp  for1_FPN.cpp  for2.cpp  for2_FPN.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+10 more)
(+19 files in other folders)
